--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
     DEPLOYMENT= local
 	ENVIRONMENT= development
-	DB= mongodb+srv://rit:ritesh12@cluster0.jukqdeb.mongodb.net/todo_list
-	DB_NAME= todo_list
+	DB= mongodb+srv://rit:ritesh12@cluster0.jukqdeb.mongodb.net/todo_app
+	DB_NAME= todo_app
 
-	DB_DEVELOPMENT= mongodb+srv://rit:ritesh12@cluster0.jukqdeb.mongodb.net/todo_list
-	DB_NAME_DEVELOPMENT= todo_list
+	DB_DEVELOPMENT= mongodb+srv://rit:ritesh12@cluster0.jukqdeb.mongodb.net/todo_app
+	DB_NAME_DEVELOPMENT= todo_app
